# max_arm64

./: CMakeLists.txt  Makefile
source/: Makefile  config.c  config.h  config.txt  error.c  error.h  game.c  hooks.h  imports.c  imports.h  main.c  maxpayne  openal.c  opengl.c  so_util.c  so_util.h  util.c  util.h
source/hooks/: game.c  openal.c  opengl.c
